kubernetes/nginx-ingress/jenkins-ingress.yml
# jenkins-ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - mothes'
spec:
  rules:
  - host: jenkins.linuxspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
